--- a/index.html
+++ b/index.html
@@ -683,11 +683,13 @@
         <div class="container-fluid footer py-5 wow fadeIn" data-wow-delay="0.1s">
             <div class="container py-5">
                 <div class="row g-5 justify-content-center">
-                    <div class="col-lg-4 text-start">
-                        <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Links</h4>
-                            <a href="#" class="btn-link"> Home</a>
-                            <a href="#" class="btn-link"> Gallery</a>
+                    <div class="col-lg-4 text-center">
+                        <div class="footer-item d-flex flex-column align-items-center">
+                            <h4 class="mb-4 text-primary"><strong>ELIORA Visuals</strong></h4>
+                            
+                            <img src="img/eliora-logo.png" alt="" width="200px">
+                            <a href="#" class="btn-link"><i class="fas fa-phone text-secondary me-2"></i>+251 9 96 88 80 60</a>
+                                   
                             <!-- <a href="#" class="btn-link"> Story</a>
                             <a href="#" class="btn-link"> Timeline</a>
                             <a href="#" class="btn-link"> RSVP</a>
@@ -709,12 +711,13 @@
                         </div>
                     </div>
                     <div class="col-lg-4 text-end">
-                        <div class="footer-item d-flex flex-column">
-                            <h4 class="mb-4 text-white">Zohar Tech</h4>
+                        <div class="footer-item d-flex flex-column align-items-center">
+                            <h4 class="mb-4 text-primary">Zohar Tech</h4>
                             <!-- <a href="#" class="btn-link"> Faceboock</a>
                             <a href="#" class="btn-link"> Instagram</a>
                             <a href="#" class="btn-link"> Twitter</a>
                             <h4 class="my-4 text-white">Contact Us</h4> -->
+                            <img src="img/zohar-tech.png" alt="" height="100px">
                             <a href="www.zohar.et" class="btn-link"><i class="fas fa-envelope text-secondary me-2"></i>Zohar.et</a>
                             <a href="#" class="btn-link"><i class="fas fa-phone text-secondary me-2"></i>+251 9 12 97 87 13</a>
                         </div>
